# cpp_utils

./: CMakeLists.txt
cmake/: MakeCppUtilLibrary.cmake
include/CppUtils/io/: DeviceHandle.h
include/CppUtils/networking/: Socket.h
include/io_handle/: BasicHandle.h  DeviceHandle.h  FileHandle.h  binary_io.h
include/networking/: Socket.h
src/: CMakeLists.txt
src/CppUtils/: CMakeLists.txt
src/CppUtils/c_util/: BitArray.h  BitManip.h  ByteArray.h  CMakeLists.txt  CUtil.cpp  CUtil.h  Enum.h
src/CppUtils/container/: ArrayView.h  CMakeLists.txt
src/CppUtils/io/: BasicHandle.h  BinaryIO.h  BinaryReader.h  BinaryWriter.h  CMakeLists.txt  DeviceHandle.cpp  DeviceHandle.h  FileHandle.cpp  FileHandle.h  I2cHandle.cpp  I2cHandle.h  IOUtils.h  PipeHandle.cpp  PipeHandle.h
src/CppUtils/networking/: CMakeLists.txt  Socket.cpp  Socket.h
src/CppUtils/preproc/: CMakeLists.txt  VariadicMacros.h
src/io/: CMakeLists.txt  DeviceHandle.cpp
src/io_handle/: CMakeLists.txt  DeviceHandle.cpp  FileHandle.cpp
test/: CMakeLists.txt  TestBitManip.cpp  TestCUtil.cpp  TestEnum.cpp  TestIO.cpp
